--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 img{
-    width: 500px;
-    height: 500px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    filter: grayscale(100%);
-    padding: 20px;
+    width: 300px;
+    height: 300px;
 }
+
+body {
+    width: 100%;
+    height: 100%;
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
+}
+
+
+button {
+    background: #282A3A;
+    color: #FFF;
+    border-radius: 5px;
+    padding: 10px 20px;
+    border: 0;
+    cursor: pointer;
+    font-family: Fredoka;
+    font-size: 18pt;
+}
+
+
 
