--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 img{
-    width: 300px;
-    height: 300px;
+    width: 150px;
+    height: 200px;
 }
 
-body {
-    width: 100%;
-    height: 100%;
-    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
-}
 
 
 button {
@@ -22,4 +17,13 @@ button {
 }
 
 
+.container{
+    gap: 10px;
+    display:grid;
+    grid-template-columns: 150px 150px 150px 150px;
+    grid-template-rows:  200px  200px  200px  200px;
+}
 
+#score{
+    
+}
